--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
     <title>狗狗年齡計算機</title>
     <link rel="stylesheet" href="style.css">
     <script src="script.js" defer></script>
+<!--  放入這三行開始 -->
+<link rel="icon" type="image/png" href="./icon.png">
+<link rel="apple-touch-icon" href="./icon.png">
+<link rel="apple-touch-icon" sizes="180x180" href="./icon.png">
+<!--  放入這三行結束 -->
 </head>
 <body>
 <!-- 名字輸入彈窗 -->
